--- a/themes/admin/templates/top-users.html.twig
+++ b/themes/admin/templates/top-users.html.twig
@@ -9,5 +9,5 @@
 
 
 {% block content %}
-    {% include 'widgets/top-users.html.twig' with {'data': pageStats.db.topUsers(0), 'hide_show_all': true} %}
+    {% include 'widgets/top-users.html.twig' with {'data': pageStats.db.topUsers(0), 'show_views': true, 'hide_show_all': true} %}
 {% endblock %}
