fix: corrected flag for show user agent

--- a/themes/admin/templates/widgets/recently-viewed-pages.html.twig
+++ b/themes/admin/templates/widgets/recently-viewed-pages.html.twig
@@ -87,7 +87,7 @@
                     </td>
                 </tr>
 
-                {% if 'show_user_agent' is defined %}
+                {% if show_user_agent is defined %}
                     <tr>
                 <td colspan="6">
                     <strong class="ps-5">User Agent: </strong> {{ s.user_agent }}
