--- a/themes/admin/templates/page-details.html.twig
+++ b/themes/admin/templates/page-details.html.twig
@@ -49,7 +49,7 @@
             {% endif %}
 
             {% if conf.show_pagedetails_recent_views %}
-                {% include 'widgets/recently-viewed-pages.html.twig' with {'hide_page': true, 'data': pageStats.db.recentPagesByDay(conf.limit_pagedetails_recent_views,null,null, {'route' : grav.uri.query('page')}) } %}
+                {% include 'widgets/recently-viewed-pages.html.twig' with {'hide_page': true, 'data': pageStats.db.recentPagesByDay(0,null,null, {'route' : grav.uri.query('page')}) } %}
             {% endif %}
         </div>
     </div>
